# xtrace

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  verify_session_ingest.py
.github/workflows/: deploy-docs.yml  deploy.yml  project-status-reminder.yml
crates/xtrace-client/: Cargo.toml  README.md
crates/xtrace-client/src/: layer.rs  lib.rs
deploy/gcp/: README.md
deploy/systemd/: xtrace.service
docs/: api.md  dev.md  ingest.md  nebula_integration.md  nebula_signal_contract.md  project_status.md  session_ingest.md  trace_and_session_design.md  xgateway_analysis.md  xinference.md  xinference_integration.md  xtrace_langfuse_python_compat.md  xtrace_requirements.md  zene_integration_suggestions.md
frontend/: README.md  index.html  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/dashboard/: StatCard.tsx
frontend/src/components/layout/: AppHeader.tsx  AppLayout.tsx  AppSidebar.tsx
frontend/src/components/traces/: TraceDetail.tsx  TraceList.tsx
frontend/src/lib/: xtrace.ts
frontend/src/pages/: Dashboard.tsx  Traces.tsx
migrations/: 0001_init.sql  0002_add_environment.sql  0003_add_metrics.sql
scripts/: deploy.sh  full_integration_test.py  mock_xinference_public_api.py  remote_xinference_e2e.py  seed_demo_data.py  xinference_chain_smoke_test.py
scripts/langfuse/: mock_xinference_langfuse.py
scripts/xtrace_sdk/: pyproject.toml
scripts/xtrace_sdk/tests/: test_session_ingest.py
scripts/xtrace_sdk/xtrace_sdk/: __init__.py  client.py  openai.py
src/: app.rs  lib.rs  main.rs  server.rs  state.rs
src/http/: auth.rs  common.rs  error.rs  metrics.rs  mod.rs  ops.rs  projects.rs  traces.rs
src/ingest/: batch.rs  mod.rs  otlp.rs
www/: index.md  package-lock.json  package.json
www/.vitepress/: config.mts
www/.vitepress/theme/: style.css
www/api/: metrics-api.md  otlp.md  rest-api.md
www/guide/: configuration.md  customer-testing.md  deployment.md  development.md  getting-started.md  session-ingest.md
www/integrations/: langfuse.md  nebula.md  tracing.md  xinference.md
www/sdk/: python-sdk.md  rust-client.md
