[package]
name = "xtrace"
version = "0.0.13"
edition = "2021"

description = "An AI observability service for collecting, storing, and querying traces, spans, and metrics across LLM and agent workflows."
license = "MIT"
repository = "https://github.com/lipish/xtrace"
homepage = "https://github.com/lipish/xtrace"
documentation = "https://docs.rs/xtrace"
readme = "README.md"

keywords = ["observability", "tracing", "llm", "ai", "telemetry"]
categories = ["web-programming", "development-tools"]

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
anyhow = "1"
base64 = "0.22"
bytes = "1"
flate2 = "1"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["trace"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
thiserror = "1"

# OTLP/HTTP protobuf decoding for Langfuse OpenTelemetry exporter
opentelemetry-proto = { version = "0.31", features = ["gen-tonic"] }
prost = "0.14"

sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
governor = { version = "0.10.4", features = ["std"] }
dashmap = "6.1.0"

[workspace]
members = ["crates/xtrace-client"]
